fix: hide scrollbar gap

--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -2,6 +2,7 @@ html {
   height: 100%;
   font-size: 18px;
   scrollbar-gutter: stable;
+  scrollbar-width: none;
 }
 
 body {
